--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -22,10 +22,10 @@
         width: 100%;
         height: 100%;
       }
-      & h1{
+      & h1 {
         font-size: 34px;
         color: white;
-        & span{
+        & span {
           color: $secondary;
           font-size: 20px;
         }
@@ -66,7 +66,7 @@
             &::after {
               position: absolute;
               left: 0;
-              bottom: 0;
+              bottom: -2px;
               content: "";
               width: 0;
               height: 2px;
@@ -177,7 +177,7 @@
           cursor: pointer;
           &::after {
             position: absolute;
-            bottom: 0;
+            bottom: -2px;
             content: "";
             width: 0%;
             height: 2px;
