--- a/src/sass/components/_animation.scss
+++ b/src/sass/components/_animation.scss
@@ -9,3 +9,15 @@
     transform: translateY(0) scale(1);
   }
 }
+
+@keyframes social {
+  0% {
+    transform: translateX(250px);
+  }
+  70% {
+    transform: translateX(-20px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
