--- a/src/sass/pages/_profile.scss
+++ b/src/sass/pages/_profile.scss
@@ -19,10 +19,32 @@
         height: 200px;
         border: 1px solid $text;
 
-        & img {
+        & .img-main-container {
+          border-radius: 50%;
+          position: relative;
           width: 150px;
           height: 150px;
-          border-radius: 50%;
+          & img {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+          }
+          & label {
+            @include position;
+            position: absolute;
+            bottom: 0;
+            height: 40%;
+            width: 100%;
+            border-radius: 0 0 200px 200px;
+            background-color: rgba(0, 0, 0, 0.402);
+            cursor: pointer;
+            &:hover {
+              color: $secondary;
+            }
+          }
+          & input {
+            display: none;
+          }
         }
       }
       & .profile-actions-container {
